<resources>
    <string name="app_name">IMessaging</string>
    <string name="confirm">Confirm</string>
    <string name="connect">链接</string>
    <string name="top_bar_back">返回</string>
    <string name="top_bar_menu">操作</string>
    <string name="tmp_user_name">小明</string>
    <string name="message_send">发送</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="login_activity">登录</string>
    <string name="start_activity">启动界面</string>
    <string name="web_activity">go web</string>
    <string name="message_activity">聊天界面</string>
    <string name="main_activity">IMSG</string>
    <string name="imsg">IMSG</string>
    <string name="main_clear">清空消息</string>
    <string name="main_address_book">通讯录</string>
    <string name="main_search">搜索</string>
    <string name="main_menu_add_friends">添加好友</string>
    <string name="main_menu_my_info">我的资料</string>
    <string name="main_menu_logout">注销</string>
    <string name="main_menu_exit">退出</string>
    <string name="tmp_message">在吗?</string>
    <string name="sign_up">注册新账号</string>
    <string name="login">登录</string>
    <string name="auto_login">自动登录</string>
    <string name="user_id">帐号</string>
    <string name="password">密码</string>
    <string name="forget_your_password">忘记密码？</string>
    <string name="complete_test">汇总调试</string>
    <string name="find_friend">查找好友</string>
    <string name="history_records">历史记录</string>
    <string name="info_detail">详细信息</string>
    <string name="user_name">昵称：</string>
    <string name="im_id">IM号：</string>
    <string name="user_sex">性别：</string>
    <string name="user_age">年龄：</string>
    <string name="user_email">邮箱：</string>
    <string name="user_intro">简介：</string>
    <string name="send_message">发送消息</string>
    <string name="intro_tmp">大家好，我是TOM的爸爸</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
