<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="horizontal"
    android:background="@drawable/launcher_bgp1"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/imsg"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:maxLines="1"
            android:textColor="#fff"
            android:textSize="18sp"
            android:hint="@string/user_id"
            android:textColorHint="#eee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:maxLines="1"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#fff"
                android:text="@string/auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:background="#aa00b3ee"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:background="#00b3ee"
                android:textColor="#fff"
                android:textSize="18sp"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

            <Button
                android:background="#00b3ee"
                android:textColor="#fff"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
