<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/back"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:text="@string/top_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/top_bar_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:text="@string/tmp_user_name"
        android:background="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <Button
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:id="@+id/menu"
        android:text="@string/top_bar_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>