<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eee"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <top.banyaoqiang.www.imessaging.TopBar
        android:id="@+id/detail_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:background="#eee"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/user_email"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:id="@+id/detail_user_image"
                android:src="@drawable/send_tmp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <TextView
                android:id="@+id/detail_user_name"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/info_detail"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:text="@string/im_id"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/detail_user_id"
                    android:text="@string/user_email"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="2dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:text="@string/user_email"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="2dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:text="@string/user_sex"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="2dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:text="@string/user_age"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <TextView
                android:layout_marginTop="2dp"
                android:background="#fff"
                android:text="@string/user_intro"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <TextView
                android:padding="10dp"
                android:text="@string/intro_tmp"
                android:layout_marginTop="1dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/detail_send_message"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:text="@string/send_message"
                android:textColor="#fff"
                android:background="#00b3ee"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>